[package]
name = "ledger-log"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }

[target.'cfg(target_family = "bolos")'.dependencies]
nanos_sdk = "*"

[features]
speculos = ["nanos_sdk/speculos"]
debug_mcu_print = []
log_error = []
log_warn = ["log_error"]
log_info = ["log_warn"]
log_debug = ["log_info"]
log_trace = ["log_debug"]

[patch.crates-io]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" } 
