[package]
name = "ledger-log"
version = "0.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }

[target.'cfg(target_family = "bolos")'.dependencies]
ledger_device_sdk = "1.4.3"

[features]
speculos = ["ledger_device_sdk/speculos"]
debug_mcu_print = []
log_error = []
log_warn = ["log_error"]
log_info = ["log_warn"]
log_debug = ["log_info"]
log_trace = ["log_debug"]
